Agregado de imágen para el banner en todas las pages

--- a/pages/alojamientos.html
+++ b/pages/alojamientos.html
@@ -78,7 +78,7 @@
         </nav>
         <!-- Banner -->
         <a href="./index.html" class="banner">
-            <img src="../resources/banner2.jpg" alt="Banner promocional de la agencia de turismo">
+            <img src="../resources/banner.jpg" alt="Banner promocional de la agencia de turismo">
         </a>
     <main>
         <div class="main__titulos">
