--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -76,7 +76,7 @@
     </nav>
     <!-- Banner -->
     <a href="./index.html" class="banner">
-        <img src="../resources/banner2.jpg" alt="Banner promocional de la agencia de turismo">
+        <img src="../resources/banner.jpg" alt="Banner promocional de la agencia de turismo">
     </a>
   <main>
     <section>
