--- a/pages/paquetes.html
+++ b/pages/paquetes.html
@@ -79,7 +79,7 @@
             </nav>
          <!-- Banner -->
          <a href="./index.html" class="banner">
-            <img src="../resources/banner2.jpg" alt="Banner promocional de la agencia de turismo">
+            <img src="../resources/banner.jpg" alt="Banner promocional de la agencia de turismo">
         </a>
     </header>
     <main>
