Agregado del Footer en las pages

--- a/index.html
+++ b/index.html
@@ -101,71 +101,73 @@
         </div>
     </main>
 
-    <!-- Pie de Página -->
-    <footer class="footer">
-        <div>
-            <ul>
-                <li>
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="bi bi-facebook"></span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="bi bi-twitter"></span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="bi bi-instagram"></span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="bi bi-whatsapp"></span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span class="bi bi-linkedin"></span>
-                    </a>
-                </li>
-
-            </ul>
-
-        </div>
-
-        <!-- Información de Copy -->
-        <p>
-            <strong>&copy Paradise Comp@ny</strong>
-        </p>
-
-    </footer>
-
+   <!-- Pie de Página -->
+<footer class="footer">
+    <div>
+        <ul>
+            <li>
+                <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="bi bi-facebook"></span>
+                </a>
+            </li>
+  
+            <li>
+                <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="bi bi-twitter"></span>
+                </a>
+            </li>
+  
+            <li>
+                <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="bi bi-instagram"></span>
+                </a>
+            </li>
+  
+            <li>
+                <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="bi bi-whatsapp"></span>
+                </a>
+            </li>
+  
+            <li>
+                <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="bi bi-linkedin"></span>
+                </a>
+            </li>
+  
+        </ul>
+  
+    </div>
+  
+    <!-- Información de Copy -->
+    <p>
+        <strong>&copy Paradise Comp@ny 2024</strong>
+    </p>
+  
+  </footer>
+  
+  
+  
 </body>
 
 </html>
