--- a/pages/alojamientos.html
+++ b/pages/alojamientos.html
@@ -112,7 +112,7 @@
     </main>
     
     <!-- Pie de Página -->
-   <footer class="footer">
+<footer class="footer">
     <div>
         <ul>
             <li>
@@ -124,7 +124,7 @@
                     <span class="bi bi-facebook"></span>
                 </a>
             </li>
-
+  
             <li>
                 <a href="#">
                     <span></span>
@@ -134,7 +134,7 @@
                     <span class="bi bi-twitter"></span>
                 </a>
             </li>
-
+  
             <li>
                 <a href="#">
                     <span></span>
@@ -144,7 +144,7 @@
                     <span class="bi bi-instagram"></span>
                 </a>
             </li>
-
+  
             <li>
                 <a href="#">
                     <span></span>
@@ -154,7 +154,7 @@
                     <span class="bi bi-whatsapp"></span>
                 </a>
             </li>
-
+  
             <li>
                 <a href="#">
                     <span></span>
@@ -164,18 +164,20 @@
                     <span class="bi bi-linkedin"></span>
                 </a>
             </li>
-
+  
         </ul>
-
+  
     </div>
-
+  
     <!-- Información de Copy -->
     <p>
-        <strong>&copy Paradise Comp@ny</strong>
+        <strong>&copy Paradise Comp@ny 2024</strong>
     </p>
-
-</footer>
-
+  
+  </footer>
+  
+  
+  
 </body>
 
 </html>
