--- a/pages/paquetes.html
+++ b/pages/paquetes.html
@@ -146,15 +146,75 @@
         </section>
     </main>
 
-    
+    <!-- Pie de Página -->
+<footer class="footer">
+  <div>
+      <ul>
+          <li>
+              <a href="#">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-facebook"></span>
+              </a>
+          </li>
 
-    <footer>
-        <!-- Información de Copy -->
-        <p>
-            &copy Paradise Comp@ny
-        </p>
+          <li>
+              <a href="#">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-twitter"></span>
+              </a>
+          </li>
 
-    </footer>
+          <li>
+              <a href="#">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-instagram"></span>
+              </a>
+          </li>
+
+          <li>
+              <a href="#">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-whatsapp"></span>
+              </a>
+          </li>
+
+          <li>
+              <a href="#">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                  <span class="bi bi-linkedin"></span>
+              </a>
+          </li>
+
+      </ul>
+
+  </div>
+
+  <!-- Información de Copy -->
+  <p>
+      <strong>&copy Paradise Comp@ny 2024</strong>
+  </p>
+
+</footer>
+
+
+
+
+   
 
 </body>
 
