Modificación de estilos en los titulos

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <a href="./index.html" class="banner">
             <img src="./resources/banner.jpg" alt="Banner promocional de la agencia de turismo">
         </a>
+        <h1 class="titulobanner"><strong>Recorremos el mundo</strong></h1>
+        <br>
     </header>
 
     <!-- Contenido Principal -->
