--- a/pages/paquetes.html
+++ b/pages/paquetes.html
@@ -81,6 +81,7 @@
          <a href="./index.html" class="banner">
             <img src="../resources/banner.jpg" alt="Banner promocional de la agencia de turismo">
         </a>
+        <h1 class="paquetes_titulobanner"><strong>Ofertas !!!!!</strong></h1>
     </header>
     <main>
         <section>
