--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paradise-Tour y Viajes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <script src="https://kit.fontawesome.com/639469dccd.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
 
@@ -16,160 +18,160 @@
         <nav>
             <!-- Logo -->
             <a href="./index.html">
-                <img class="imagen-logo" src="./resources/logo.jpg" alt="Logo de la página">
+                <img class="imagen-logo" src="./resources/logo_transp2.jpg" alt="Logo de la página">
             </a>
             <!-- Menú con Links -->
             <ul class="imagen-logo menu">
 
                 <li>
                     <a href="./index.html" class="btn-neon">
-                        <span id="1"></span>
-                        <span id="2"></span>
-                        <span id="3"></span>
-                        <span id="4"></span>
-                        <strong>Inicio</strong>
+
+                        <strong><i class="fa-solid fa-house"></i>Inicio</strong>
                     </a>
                 </li>
 
                 <li>
                     <a href="./pages/destinos.html" class="btn-neon">
-                        <span id="1"></span>
-                        <span id="2"></span>
-                        <span id="3"></span>
-                        <span id="4"></span>
-                        <strong>Destinos</strong>
+
+                        <strong><i class="fa-solid fa-plane"></i>Destinos</strong>
                     </a>
                 </li>
 
                 <li>
                     <a href="./pages/paquetes.html" class="btn-neon">
-                        <span id="1"></span>
-                        <span id="2"></span>
-                        <span id="3"></span>
-                        <span id="4"></span>
-                       <strong>Paquetes</strong>
+
+                        <strong><i class="fa-solid fa-suitcase"></i>Paquetes</strong>
                     </a>
                 </li>
 
                 <li>
                     <a href="./pages/alojamientos.html" class="btn-neon">
-                        <span id="1"></span>
-                        <span id="2"></span>
-                        <span id="3"></span>
-                        <span id="4"></span>
-                        <strong>Alojamientos</strong>
+
+                        <strong><i class="fa-solid fa-hotel"></i>Alojamientos</strong>
                     </a>
                 </li>
 
                 <li>
                     <a href="./pages/contacto.html" class="btn-neon">
-                        <span id="1"></span>
-                        <span id="2"></span>
-                        <span id="3"></span>
-                        <span id="4"></span>
-                        <strong>Contacto</strong>
+
+                        <strong><i class="fa-solid fa-address-book"></i>Contacto</strong>
                     </a>
                 </li>
             </ul>
         </nav>
         <!-- Banner -->
-        <a href="./index.html" class="banner">
-            <img src="./resources/banner.jpg" alt="Banner promocional de la agencia de turismo">
-        </a>
-        <h1 class="titulobanner"><strong>Recorremos el mundo</strong></h1>
-        <br>
+        <div id="slider">
+            <div id="contenedor">
+                <div id="imagen1">
+
+                </div>
+
+                <div id="imagen2">
+
+                </div>
+
+                <div id="imagen3">
+
+                </div>
+
+            </div>
+
+        </div>
+
     </header>
 
     <!-- Contenido Principal -->
     <main class="main__inicio">
         <!-- Grilla de Viajes -->
+        <h1 class="main_titulogrilla animate__animated animate__shakeY"><strong>Recorremos el mundo</strong></h1>
+        <br>
         <div class="container">
             <div class="cancun">
-                <h2>Cancún</h2>
+                <h2 class="animate__animated animate__flash">Cancún</h2>
             </div>
             <div class="disney">
 
-                <h2>Disney</h2>
+                <h2 class="animate__animated animate__flash">Disney</h2>
             </div>
             <div class="roma">
 
-                <h2>Roma</h2>
+                <h2 class="animate__animated animate__flash">Roma</h2>
             </div>
 
             <div class="africa">
 
-                <h2>África</h2>
+                <h2 class="animate__animated animate__flash">África</h2>
             </div>
         </div>
     </main>
 
-   <!-- Pie de Página -->
-<footer class="footer">
-    <div>
-        <ul>
-            <li>
-                <a href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span class="bi bi-facebook"></span>
-                </a>
-            </li>
-  
-            <li>
-                <a href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span class="bi bi-twitter"></span>
-                </a>
-            </li>
-  
-            <li>
-                <a href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span class="bi bi-instagram"></span>
-                </a>
-            </li>
-  
-            <li>
-                <a href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span class="bi bi-whatsapp"></span>
-                </a>
-            </li>
-  
-            <li>
-                <a href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span class="bi bi-linkedin"></span>
-                </a>
-            </li>
-  
-        </ul>
-  
-    </div>
-  
-    <!-- Información de Copy -->
-    <p>
-        <strong>&copy Paradise Comp@ny 2024</strong>
-    </p>
-  
-  </footer>
-  
-  
-  
+    <!-- Pie de Página -->
+    <footer class="footer">
+        <div>
+            <ul>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="bi bi-facebook"></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="bi bi-twitter"></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="bi bi-instagram"></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="bi bi-whatsapp"></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="bi bi-linkedin"></span>
+                    </a>
+                </li>
+
+            </ul>
+
+        </div>
+
+        <!-- Información de Copy -->
+        <p>
+            <strong>&copy Paradise Comp@ny 2024</strong>
+        </p>
+
+    </footer>
+
+
+
 </body>
 
 </html>
